prevent horizontal scrollbar

--- a/srcmedia/scss/common/_body.scss
+++ b/srcmedia/scss/common/_body.scss
@@ -3,5 +3,5 @@ body {
     flex-direction: column;
     height: 100vh;
     background: $white;
-    // overflow-x: hidden;
+    overflow-x: hidden; // prevent horizontal scrollbar
 }
